refactor: share sync HUD implementation across platforms
- extract common SyncHudRenderer
- add platform-specific HUD registration implementations